# pihole6api

./: CHANGELOG.md  README.md  pyproject.toml
src/pihole6api/: config.py  conn.py  list_management.py
