[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pihole6api"
version = "0.2.1"
description = "Python API Client for Pi-hole 6"
authors = [{name = "Shane Barbetta", email = "shane@barbetta.me"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pihole", "dns", "adblocking", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests >=2.26.0",
]

[project.urls]
Homepage = "https://github.com/sbarbett/pihole6api"
Documentation = "https://github.com/sbarbett/pihole6api"
Source = "https://github.com/sbarbett/pihole6api"
Issues = "https://github.com/sbarbett/pihole6api/issues"
